--- a/DWS/bundleconfig.json
+++ b/DWS/bundleconfig.json
@@ -9,6 +9,26 @@
     ]
   },
   {
+    "outputFileName": "wwwroot/css/vendors/site.base.css",
+    // An array of relative input file paths. Globbing patterns supported
+    "inputFiles": [
+      "wwwroot/css/vendors/bootstarp.min.css"
+    ]
+  },
+  {
+    "outputFileName": "wwwroot/js/site.base.js",
+    "inputFiles": [
+      "wwwroot/js/vendors/jquery-3.2.1.min.js"
+    ],
+    // Optionally specify minification options
+    "minify": {
+      "enabled": true,
+      "renameLocals": true
+    },
+    // Optionally generate .map file
+    "sourceMap": false
+  },
+  {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
       "wwwroot/js/site.js"
